==> ppp1234lll/General_Version/bootloader/Hardware/src/bsp_spi_bus.c <==
#include "bsp_spi_bus.h"
#include "bsp.h"
#define USE_SPI_DMA      /* DMA方式  */
#define SPIx                            SPI0
#define SPIx_CLK                        RCU_SPI0
#define DMAx_CLK                        RCU_DMA1
#define SPIx_SCK_CLK                    RCU_GPIOB
#define SPIx_SCK_GPIO                   GPIOB
#define SPIx_SCK_PIN                    GPIO_PIN_3
#define SPIx_SCK_AF                     GPIO_AF_5
#define SPIx_MISO_CLK                    RCU_GPIOB
#define SPIx_MISO_GPIO                   GPIOB
#define SPIx_MISO_PIN                    GPIO_PIN_4
#define SPIx_MISO_AF                     GPIO_AF_5
#define SPIx_MOSI_CLK                    RCU_GPIOB
#define SPIx_MOSI_GPIO                   GPIOB
#define SPIx_MOSI_PIN                    GPIO_PIN_5
#define SPIx_MOSI_AF                     GPIO_AF_5
#define SPIx_DMAx                        DMA1
#define SPIx_TX_DMA_CHANNEL              DMA_CH3
#define SPIx_RX_DMA_CHANNEL              DMA_CH2
#define SPIx_TX_DMA_PERIEN               DMA_SUBPERI3
#define SPIx_RX_DMA_PERIEN               DMA_SUBPERI3
#define SPIx_DMA_TX_IRQn                 DMA1_Channel3_IRQn
#define SPIx_DMA_RX_IRQn                 DMA1_Channel2_IRQn
#define SPIx_DMA_TX_IRQHandler           DMA1_Channel3_IRQHandler
#define SPIx_DMA_RX_IRQHandler           DMA1_Channel2_IRQHandler
#define SPIx_IRQn                        SPI0_IRQn
#define SPIx_IRQHandler                  SPI0_IRQHandler

void bsp_InitSPIBus(void)
{    
    g_spi_busy = 0;
    bsp_InitSPIGPIO();
    bsp_InitSPIDMA();
    bsp_InitSPIParam(SPI_BAUDRATEPRESCALER_15M, SPI_CK_PL_HIGH_PH_2EDGE);
}

void bsp_InitSPIParam(uint32_t _BaudRatePrescaler, uint32_t _CLKPolarity_Phase)
{
    spi_parameter_struct  spi_init_struct;
    /* 提高执行效率，只有在SPI硬件参数发生变化时，才执行HAL_Init */
    if (s_BaudRatePrescaler == _BaudRatePrescaler && s_CLKPolarity_Phase == _CLKPolarity_Phase)
    {        
        return;
    }

    s_BaudRatePrescaler = _BaudRatePrescaler;    
    s_CLKPolarity_Phase = _CLKPolarity_Phase;
    
    /* 设置SPI参数 */
    spi_init_struct.trans_mode           = SPI_TRANSMODE_FULLDUPLEX;
    spi_init_struct.device_mode          = SPI_MASTER;
    spi_init_struct.frame_size           = SPI_FRAMESIZE_8BIT;
    spi_init_struct.clock_polarity_phase = _CLKPolarity_Phase;
    spi_init_struct.nss                  = SPI_NSS_SOFT;
    spi_init_struct.prescale             = _BaudRatePrescaler;
    spi_init_struct.endian               = SPI_ENDIAN_MSB;
    spi_init(SPIx, &spi_init_struct);

    spi_enable(SPIx);    

//    spi_i2s_data_transmit(SPIx, 0xFF);
}

void bsp_spiTransfer(void)
{
    if (g_spiLen > SPI_BUFFER_SIZE)
    {
        return;
    }
    
    /* DMA方式传输 */
#ifdef USE_SPI_DMA
    wTransferState = TRANSFER_WAIT;

    // 关闭SPI DMA
    dma_channel_disable(SPIx_DMAx, SPIx_TX_DMA_CHANNEL);
    dma_channel_disable(SPIx_DMAx, SPIx_RX_DMA_CHANNEL);

    // 设置发送数据量
    dma_transfer_number_config(SPIx_DMAx, SPIx_TX_DMA_CHANNEL, g_spiLen);
    // 设置接收数据量
    dma_transfer_number_config(SPIx_DMAx, SPIx_RX_DMA_CHANNEL, g_spiLen);
    spi_i2s_data_receive(SPIx);
    // 清除DMA标志位
    dma_interrupt_flag_clear(SPIx_DMAx, SPIx_TX_DMA_CHANNEL, DMA_INT_FLAG_FTF);
    dma_interrupt_flag_clear(SPIx_DMAx, SPIx_RX_DMA_CHANNEL, DMA_INT_FLAG_FTF);

    // 使能 DMA
    dma_channel_enable(SPIx_DMAx, SPIx_TX_DMA_CHANNEL);
    dma_channel_enable(SPIx_DMAx, SPIx_RX_DMA_CHANNEL);

    while (wTransferState == TRANSFER_WAIT)
    {
        ;
    }
#endif

    /* 中断方式传输 */    
#ifdef USE_SPI_INT
    wTransferState = TRANSFER_WAIT;

    // 在这里使能接收和发送中断
    spi_i2s_interrupt_enable(SPIx, SPI_I2S_INT_RBNE); 
    spi_i2s_interrupt_enable(SPIx, SPI_I2S_INT_TBE);  

    while (wTransferState == TRANSFER_WAIT)
    {
        ;
    }

#endif

    /* 查询方式传输 */    
#ifdef USE_SPI_POLL
    for(uint16_t i = 0; i < g_spiLen; i++)
    {
        g_spiRxBuf[i] = bsp_spiTransfer_Byte(g_spiTxBuf[i]);
    }
#endif
}

    void SPIx_IRQHandler(void)
    {
        static uint16_t tx_index = 0;
        static uint16_t rx_index = 0;
        // 接收中断
        if (spi_i2s_interrupt_flag_get(SPIx, SPI_I2S_INT_FLAG_RBNE) != RESET) 
        {
            g_spiRxBuf[rx_index++] = spi_i2s_data_receive(SPIx);
            if (rx_index >= g_spiLen) 
            {
                // 传输完成后关闭接收中断
                spi_i2s_interrupt_disable(SPIx, SPI_I2S_INT_RBNE);
                wTransferState = TRANSFER_COMPLETE;
                rx_index = 0;
            }
        }
        
        // 发送中断
        if (spi_i2s_interrupt_flag_get(SPIx, SPI_I2S_INT_FLAG_TBE) != RESET)
        {
            if (tx_index < g_spiLen) 
            {
                spi_i2s_data_transmit(SPIx, g_spiTxBuf[tx_index++]);
            } 
            else 
            {
                // 发送完成，关闭发送中断，防止一直进中断
                spi_i2s_interrupt_disable(SPIx, SPI_I2S_INT_TBE);
                // wTransferState = TRANSFER_COMPLETE;
                tx_index = 0;
            }
        }
        
        // 错误中断
        if (spi_i2s_interrupt_flag_get(SPIx, SPI_I2S_INT_ERR) != RESET)
        {
            wTransferState = TRANSFER_ERROR;
            spi_i2s_data_receive(SPIx);
            SPI_STAT(SPIx);
        }
    }
