==> SumerPock/Illuminator/Core/Src/bsp_spi_bus.c <==
#include "bsp.h"
#define USE_SPI_POLL   /* 查询方式 */
#define SPIx						SPI1
#define SPIx_CLK_ENABLE()			__HAL_RCC_SPI1_CLK_ENABLE()
#define DMAx_CLK_ENABLE()			__HAL_RCC_DMA2_CLK_ENABLE()
#define SPIx_FORCE_RESET()			__HAL_RCC_SPI1_FORCE_RESET()
#define SPIx_RELEASE_RESET()		__HAL_RCC_SPI1_RELEASE_RESET()
#define SPIx_SCK_CLK_ENABLE()		__HAL_RCC_GPIOB_CLK_ENABLE()
#define SPIx_SCK_GPIO				GPIOB
#define SPIx_SCK_PIN				GPIO_PIN_3
#define SPIx_SCK_AF					GPIO_AF5_SPI1
#define SPIx_MISO_CLK_ENABLE()		__HAL_RCC_GPIOB_CLK_ENABLE()
#define SPIx_MISO_GPIO				GPIOB
#define SPIx_MISO_PIN 				GPIO_PIN_4
#define SPIx_MISO_AF				GPIO_AF5_SPI1
#define SPIx_MOSI_CLK_ENABLE()		__HAL_RCC_GPIOB_CLK_ENABLE()
#define SPIx_MOSI_GPIO			GPIOB
#define SPIx_MOSI_PIN 			GPIO_PIN_5
#define SPIx_MOSI_AF				GPIO_AF5_SPI1
#define SPIx_TX_DMA_CHANNEL         DMA_CHANNEL_3
#define SPIx_TX_DMA_STREAM          DMA2_Stream3
#define SPIx_RX_DMA_CHANNEL         DMA_CHANNEL_3
#define SPIx_RX_DMA_STREAM          DMA2_Stream0
#define SPIx_IRQn                   SPI1_IRQn
#define SPIx_IRQHandler             SPI1_IRQHandler
#define SPIx_DMA_TX_IRQn            DMA2_Stream3_IRQn
#define SPIx_DMA_RX_IRQn            DMA2_Stream0_IRQn
#define SPIx_DMA_TX_IRQHandler      DMA2_Stream3_IRQHandler
#define SPIx_DMA_RX_IRQHandler      DMA2_Stream0_IRQHandler

void bsp_InitSPIBus(void)
{	
	g_spi_busy = 0;
	//SPI_BAUDRATEPRESCALER_2  SPI_POLARITY_HIGH
	//bsp_InitSPIParam(SPI_BAUDRATEPRESCALER_16, SPI_PHASE_2EDGE, SPI_POLARITY_LOW);
	bsp_InitSPIParam(SPI_BAUDRATEPRESCALER_2 , SPI_PHASE_1EDGE , SPI_POLARITY_HIGH);
}

void bsp_InitSPIParam(uint32_t _BaudRatePrescaler, uint32_t _CLKPhase, uint32_t _CLKPolarity)
{
	/* 提高执行效率，只有在SPI硬件参数发生变化时，才执行HAL_Init */
	if (s_BaudRatePrescaler == _BaudRatePrescaler && s_CLKPhase == _CLKPhase && s_CLKPolarity == _CLKPolarity)
	{		
		return;
	}

	s_BaudRatePrescaler = _BaudRatePrescaler;	
	s_CLKPhase = _CLKPhase;
	s_CLKPolarity = _CLKPolarity;
	
	/* 设置SPI参数 */
	hspi.Instance               = SPIx;                   /* 例化SPI */
	hspi.Init.BaudRatePrescaler = _BaudRatePrescaler;     /* 设置波特率 */
	hspi.Init.Direction         = SPI_DIRECTION_2LINES;   /* 全双工 */
	hspi.Init.CLKPhase          = _CLKPhase;              /* 配置时钟相位 */
	hspi.Init.CLKPolarity       = _CLKPolarity;           /* 配置时钟极性 */
	hspi.Init.DataSize          = SPI_DATASIZE_8BIT;      /* 设置数据宽度 */
	hspi.Init.FirstBit          = SPI_FIRSTBIT_MSB;       /* 数据传输先传高位 */
	hspi.Init.TIMode            = SPI_TIMODE_DISABLE;     /* 禁止TI模式  */
	hspi.Init.CRCCalculation    = SPI_CRCCALCULATION_DISABLE; /* 禁止CRC */
	hspi.Init.CRCPolynomial     = 7;                       /* 禁止CRC后，此位无效 */
	hspi.Init.NSS               = SPI_NSS_SOFT;            /* 使用软件方式管理片选引脚 */
	hspi.Init.Mode 			 	= SPI_MODE_MASTER;         /* SPI工作在主控模式 */

	/* 复位SPI */
	if(HAL_SPI_DeInit(&hspi) != HAL_OK)
	{
		//Error_Handler(__FILE__, __LINE__);     
	}

	/* 初始化SPI */
	if (HAL_SPI_Init(&hspi) != HAL_OK)
	{
		//Error_Handler(__FILE__, __LINE__);
	}	
}

void bsp_spiTransfer(void)
{
	if (g_spiLen > SPI_BUFFER_SIZE)
	{
		return;
	}
	
	/* DMA方式传输 */
#ifdef USE_SPI_DMA
	wTransferState = TRANSFER_WAIT;
	
if(HAL_SPI_TransmitReceive_DMA(&hspi, (uint8_t*)g_spiTxBuf, (uint8_t *)g_spiRxBuf, g_spiLen) != HAL_OK)	
{
	Error_Handler(__FILE__, __LINE__);
}
	
	while (wTransferState == TRANSFER_WAIT)
	{
		;
	}
#endif

	/* 中断方式传输 */	
#ifdef USE_SPI_INT
	wTransferState = TRANSFER_WAIT;

if(HAL_SPI_TransmitReceive_IT(&hspi, (uint8_t*)g_spiTxBuf, (uint8_t *)g_spiRxBuf, g_spiLen) != HAL_OK)	
{
	Error_Handler(__FILE__, __LINE__);
}
	
	while (wTransferState == TRANSFER_WAIT)
	{
		;
	}
#endif

	/* 查询方式传输 */	
#ifdef USE_SPI_POLL
	if(HAL_SPI_TransmitReceive(&hspi, (uint8_t*)g_spiTxBuf, (uint8_t *)g_spiRxBuf, g_spiLen, 1000000) != HAL_OK)	
	{
		while(1)
		{
		}
		//Error_Handler(__FILE__, __LINE__);
	}	
#endif
}

	void SPIx_IRQHandler(void)
	{
		HAL_SPI_IRQHandler(&hspi);
	}

	void SPIx_IRQHandler(void)
	{
		HAL_SPI_IRQHandler(&hspi);
	}
